--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,95 @@
-body {
-    font-family: 'Roboto', sans-serif;
-  color: black;
-  background: white;
-    
-}
 :root {
+  --header-color: #ffffff;
+}
 
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  color: #757575;
 }
 
 .list {
-    list-style: none;
+  list-style: none;
 }
 .link {
-    text-decoration: none;
-span {
-    color:#2196F3 ;
+  text-decoration: none;
 }
 
+/*--------- HEADER ---------*/
+.header {
+  background-color: var(--header-color);
+}
+span {
+  color: #2196f3;
+}
+.logo {
+  font-family: Raleway;
+  font-weight: bold;
+  color: #000000;
+  width: 145px;
+  height: 31px;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+.header-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
 
+.header-mail,
+.header-tel {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+.header-link:hover,
+.header-mail:hover,
+.header-tel:hover,
+.header-link:focus,
+.header-mail:focus,
+.header-tel:focus {
+  color: #2196f3;
+}
 
+/*--------- HERO ---------*/
+.hero {
+  background-color: #2f303a;
+}
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.hero-btn {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+/* 
+selection color  #2196f3
+our team F5F4FA
+#757575
 #2F303A
 #ECECEC
 font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;
+ */
