--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,10 @@ span {
   color: var(--primary-bg-color);
   background-color: var(--selection-color);
 }
+.all {
+  color: var(--primary-bg-color);
+  background-color: var(--selection-color);
+}
 /*--------- MAIN PORTFOLIO.html---------*/
 .main-title {
   font-weight: 700;
